--- a/pussycat-agency/dockerfile
+++ b/pussycat-agency/dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package-lock.json .
 COPY package.json .
 RUN npm ci
+COPY . .
 RUN npm run build
 CMD [ "npm", "run", "start", "-p", "8080" ]
