--- a/pussycat-agency/dockerfile
+++ b/pussycat-agency/dockerfile
@@ -5,4 +5,4 @@ COPY package.json .
 RUN npm ci
 COPY . .
 RUN npm run build
-CMD [ "npm", "run", "start", "-p", "8080" ]
+CMD [ "npx", "next", "start", "-p", "8080", ]
