--- a/pussycat-agency/dockerfile
+++ b/pussycat-agency/dockerfile
@@ -1,9 +1,10 @@
 FROM tomyj/my-env:node
+ENV PORT=80
+ENV API_HOSTNAME=api
 WORKDIR /app
 COPY package-lock.json .
 COPY package.json .
 RUN npm ci
 COPY . .
 RUN npx next build
-ENV PORT=8080
 CMD [ "npx", "next", "start" ]
