--- a/pussycat-agency/dockerfile
+++ b/pussycat-agency/dockerfile
@@ -1,6 +1,6 @@
 FROM tomyj/my-env:node
 ENV PORT=80
-ENV API_HOSTNAME=api
+ENV API_HOSTNAME=api:8000
 WORKDIR /app
 COPY package-lock.json .
 COPY package.json .
